--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@truffle/hdwallet-provider": "2.1.15",
+    "dotenv": "16.4.5",
     "ganache": "7.9.2",
     "mocha": "10.3.0",
     "solc": "0.4.17",
