feat: migraiton solidity from 0.4.17 to 0.8.9

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "deploy": "node ./test/deploy.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +14,7 @@
     "dotenv": "16.4.5",
     "ganache": "7.9.2",
     "mocha": "10.3.0",
-    "solc": "0.4.17",
+    "solc": "0.8.9",
     "web3": "4.6.0"
   }
 }
